Tidy up attribute id to class. Fix stylesheet bugs with background color and view heigt on small screen. Add link function to mailadress and image text.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Fredoka', sans-serif;
   font-weight: 500;
   letter-spacing: 2px;
+  background-color: #faebd7; 
 }
 
 h1 {
@@ -44,22 +45,22 @@ header {
   font-weight: 800;
 }
 
-#internal-navigation {
+.internal-navigation {
   float: right;
   text-align: center;
 }
 
-#internal-navigation a {
+.internal-navigation a {
   text-decoration: none;
   color: black;
   font-size: 20px;
 }
   
-#internal-navigation a:hover {
+.internal-navigation a:hover {
   color: #f5700db5;
 }
 
-#menu li {
+.menu li {
   display: inline;
   padding: 6vh;
   line-height: 55px;
@@ -76,16 +77,15 @@ header {
   height: 100vh;
 }
   
-#left-top-content {
+.left-top-content {
   float: left;
   background-color: #f5700db5;
 }
   
-#right-bottom-content{
+.right-bottom-content{
   float: right;
   padding: 65px 0;
   overflow-x: auto;
-  background-color: #faebd7; 
 }
 
 ::-webkit-scrollbar {
@@ -93,7 +93,7 @@ header {
 }
 
 /* image block */
-#hero-image {
+.hero-image {
   background: url('../images/pexels-elevate-1267360.jpg') no-repeat;
   background-position: center;
   background-size: cover;
@@ -101,7 +101,7 @@ header {
   height: 100%;
 }
 
-#image-text {
+.image-text {
   width: 530px;
   height: 270px;
   bottom: 450px;
@@ -112,8 +112,13 @@ header {
   position: relative;
 }
 
+h1 > a {
+  text-decoration: none;
+  color: #faebd7;
+}
+
 /* text block */
-#about-text, #info-text, #form-text {
+.info-text {
   width: 85%;
   height: 100%;
   margin: 0 auto;
@@ -121,23 +126,23 @@ header {
   position: relative;
 }
 
-#text-head {
+.text-head {
   padding-top: 150px;
 }
 
-#anecdote {
+.fun-facts {
   font-size: 20px;
 }
 
 /* info page 2 */
-#info-list {
+.info-list {
   left: 25px;
   width: 85%;
   font-size: 25px;
   position: inherit;
 }
 
-#info-list li {
+.info-list li {
   left: -23px;
   list-style-type: none;
   position: relative; 
@@ -152,25 +157,18 @@ header {
   font-size: smaller;
 }
 
-.fa-solid:hover {
-  color: #f5700db5;;
-}
-
-#fun-facts {
-  font-size: 20px;
-}
-  
-#info-text a {
+.fun-facts a {
   text-decoration: none;
   color: black;
 }
   
-#info-text a:hover {
+.fun-facts a:hover {
+  font-weight: 800;
   color: #f5700db5;;
 }
 
 /* form page 3 */
-#sign-up {
+.sign-up {
   height: 400px;
   width: 400px;
   line-height: 30px;
@@ -187,11 +185,11 @@ header {
   background-color: transparent;
 }
 
-#sign-up-header {    
+.sign-up-header {    
   padding: 70px 0 20px 0;
 }
 
-#sign-up > h3 {
+.sign-up > h2 {
   text-align: center;
 }
 #padding-top-bottom {
@@ -202,7 +200,7 @@ header {
   margin: 10px;
 }
   
-#small-label {
+.small-label {
   padding-left: 12px;
 }
 
@@ -236,22 +234,22 @@ footer {
   font-weight: 800;
 }
   
-#external-navigation {
+.external-navigation {
   float: right;
   text-align: center;
 }
 
-#external-navigation a {
+.external-navigation a {
   text-decoration: none;
   color: black;
   font-size: 20px;
 }
   
-#external-navigation a:hover {
+.external-navigation a:hover {
   color: #f5700db5;
 }
 
-#links > li {
+.links > li {
   display: inline;
   padding: 6vh;
 }
@@ -263,7 +261,7 @@ footer {
     p {
       font-size: 22px;
     }
-    #anecdote, #fun-facts {
+    .fun-facts {
       font-size: 17px;
     }
 }
@@ -273,13 +271,13 @@ footer {
       font-size: 80px;
     }
   
-    #header-spacer {
+    .header-spacer {
       width: 100%;
       height: 30px;
       z-index: -2;
     }
   
-    #internal-navigation {
+    .internal-navigation {
       width: 100%;
       top: -35px;
       line-height: 55px;
@@ -287,22 +285,21 @@ footer {
       position: relative;
     }
   
-    #menu li {
+    .menu li {
       padding: 2.5vh;
     }
   
     .main-content {
       width: 100%;
-      height: 1200px;
     }
   
-    #left-top-content {
+    .left-top-content {
       width: 100%;
       float: left;
       clear: both;
     }
   
-    #right-bottom-content {
+    .right-bottom-content {
       width: 100%;
       padding: 0;
       overflow-x: unset;
@@ -310,15 +307,15 @@ footer {
       clear: both;
     }
   
-    #image-text {
+    .image-text {
       bottom: 30%;
     }
 
-    #about-text, #info-text, #form-text {
+    .info-text {
       top: 40px;
     }
 
-    #text-head {
+    .text-head {
       padding-top: 0;
     }
     
@@ -326,27 +323,27 @@ footer {
       padding-bottom: 0;
     }
   
-    #footer-spacer {
+    .footer-spacer {
       width: 100%;
       z-index: -2;
       position: absolute;
     }
   
-    #external-navigation {
+    .external-navigation {
       width: 100%;
       line-height: 55px;
       background-color: #faebd7;
       position: relative;
     }
   
-    #links > li {
+    .links > li {
       padding: 2.5vh;
     }
 }
 
   /* screens size 900px height or below */
 @media screen and (max-height: 900px){
-    #text-head {
+    .text-head {
       padding-top: 0;
     }
 }
@@ -372,7 +369,7 @@ footer {
       height: unset;
     }
   
-    #left-top-content {
+    .left-top-content {
       width: 100%;
       height: 30vh;
       top: 60px;
@@ -381,7 +378,7 @@ footer {
       background-color: #faebd7;
     }
   
-    #right-bottom-content {
+    .right-bottom-content {
       width: 100%;
       max-height: 70vh;
       float: left;
@@ -389,7 +386,7 @@ footer {
       overflow-x: auto;
     }
   
-    #hero-image {
+    .hero-image {
       background: url('../images/pexels-elevate-1267358.jpg') no-repeat;
       background-position: bottom;
       background-size: cover;
@@ -397,7 +394,7 @@ footer {
       max-height: 100%;
     }
   
-    #image-text {
+    .image-text {
       max-width: 100vw;
       max-height: 432px;
       margin: 0;
@@ -408,23 +405,20 @@ footer {
       position: absolute;
     }
   
-    #about-text,
-    #info-text,
-    #form-text {
+    .info-text {
       top: 15px;
       margin-bottom: 80px;
     }
   
-    #anecdote,
-    #fun-facts {
+    .fun-facts {
       font-size: 12px;
     }
   
-    #info-list {
+    .info-list {
       font-size: 15px;
     }
   
-    #sign-up {
+    .sign-up {
       width: 300px;
       height: 50%;
       margin: 0;
@@ -432,11 +426,11 @@ footer {
       line-height: 15px;
     }
   
-    #sign-up-header {
+    .sign-up-header {
       padding: 20px 0;
     }
   
-    #sign-up > h3 {
+    .sign-up > h2 {
       text-align: left;
     }
   
@@ -446,7 +440,7 @@ footer {
       padding: 10px 0;
     }
   
-    #small-label {
+    .small-label {
       padding-left: 0;
     }
   
@@ -458,15 +452,15 @@ footer {
       margin: 10% 20px 20px 20vw;
     }
   
-    #internal-navigation a,
-    #external-navigation a {
+    .internal-navigation a,
+    .external-navigation a {
       font-size: 12px;
     }
 }
 
 /* screens size 300px or below */
 @media screen and (max-width: 300px) {
-  #about-text, #info-text, #form-text {
+  .info-text {
     width: 95%;
   }
 }
